<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Registration"
    tools:showIn="@layout/activity_registration">
    
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:id="@+id/registrationemail"
            android:hint="@string/enter_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:id="@+id/registrationpassword"
            android:hint="@string/enter_your_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <Button
            android:layout_margin="15dp"
            android:id="@+id/registrationregister"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:text="@string/already_registered_sign_in_here"
            android:id="@+id/registrationsignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="97dp"
        android:text="@string/user_registration" />

</RelativeLayout>